core/tooling/lsp/tests/snapshots/semantic_tokens__semantic_tokens_comments.snap
---
source: core/tooling/lsp/tests/semantic_tokens.rs
assertion_line: 41
expression: tokens
---
[
    SemanticToken {
        delta_line: 1,
        delta_start: 4,
        length: 37,
        token_type: 10,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 2,
        delta_start: 6,
        length: 5,
        token_type: 1,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 2,
        delta_start: 12,
        length: 4,
        token_type: 4,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 6,
        length: 6,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
]
