core/tooling/lsp/tests/snapshots/semantic_tokens__semantic_tokens_operators.snap
---
source: core/tooling/lsp/tests/semantic_tokens.rs
assertion_line: 27
expression: tokens
---
[
    SemanticToken {
        delta_line: 0,
        delta_start: 0,
        length: 1,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 5,
        length: 1,
        token_type: 8,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 4,
        length: 1,
        token_type: 8,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 4,
        length: 1,
        token_type: 8,
        token_modifiers_bitset: 0,
    },
]
